--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Sitio</title>
 </head>
+
 <body>
 
     <header>
@@ -12,7 +14,7 @@
     </header>
 
     <section>
-        <p>Este es un sitio de ejemplo. Puedes editar este contenido según tus necesidades.</p>
+        <p>this is a test</p>
     </section>
 
     <footer>
@@ -20,4 +22,5 @@
     </footer>
 
 </body>
+
 </html>
