--- a/lesson01/holygrail.html
+++ b/lesson01/holygrail.html
@@ -30,7 +30,19 @@
 
 <body>
 
-    <!-- Contenido de tu página -->
+    <header>
+        <!-- Contenido del encabezado -->
+        <h1>Encabezado de tu Página</h1>
+        <!-- Otros elementos del encabezado según tu diseño -->
+    </header>
+
+    <!-- Contenido principal de tu página -->
+
+    <footer>
+        <!-- Contenido del pie de página -->
+        <p>Pie de Página &copy; 2024</p>
+        <!-- Otros elementos del pie de página según tu diseño -->
+    </footer>
 
     <!-- Enlaces a archivos JavaScript (si es necesario) -->
     <script src="scripts/jquery.min.js"></script>
