--- a/lesson01/holygrail.html
+++ b/lesson01/holygrail.html
@@ -7,6 +7,7 @@
     <title>Título de tu Página</title>
     <meta name="description" content="Descripción de tu página.">
     <meta name="author" content="Tu Nombre">
+    <link rel="stylesheet" href="styles/holygrail.css">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png">
@@ -18,35 +19,19 @@
     <meta property="og:image" content="URL de la imagen para Facebook">
     <meta property="og:description" content="Descripción para Facebook">
 
-    <!-- Enlaces a archivos CSS externos -->
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/main.css">
 
-    <!-- Enlace a la hoja de estilo interno (si es necesario) -->
-    <style>
-        /* Aquí puedes agregar reglas de estilo específicas si es necesario */
-    </style>
 </head>
 
 <body>
 
     <header>
-        <!-- Contenido del encabezado -->
-        <h1>Encabezado de tu Página</h1>
-        <!-- Otros elementos del encabezado según tu diseño -->
+        <h1 contenteditable>Header</h1>
     </header>
+    <div class="left-sidebar" contenteditable>Left Sidebar</div>
+    <main contenteditable></main>
+    <div class="right-sidebar" contenteditable>Right Sidebar</div>
+    <footer contenteditable>Footer Content</footer>
 
-    <!-- Contenido principal de tu página -->
-
-    <footer>
-        <!-- Contenido del pie de página -->
-        <p>Pie de Página &copy; 2024</p>
-        <!-- Otros elementos del pie de página según tu diseño -->
-    </footer>
-
-    <!-- Enlaces a archivos JavaScript (si es necesario) -->
-    <script src="scripts/jquery.min.js"></script>
-    <script src="scripts/main.js"></script>
 </body>
 
 </html>
