--- a/lesson01/holygrail.html
+++ b/lesson01/holygrail.html
@@ -27,7 +27,8 @@
     <header>
         <h1 contenteditable>Header</h1>
     </header>
-    <div class="left-sidebar" contenteditable>Left Sidebar</div>
+    <nav>main nav section1</nav>
+
     <main contenteditable></main>
     <div class="right-sidebar" contenteditable>Right Sidebar</div>
     <footer contenteditable>Footer Content</footer>
