--- a/lesson01/holygrail.html
+++ b/lesson01/holygrail.html
@@ -9,29 +9,17 @@
     <meta name="author" content="Tu Nombre">
     <link rel="stylesheet" href="styles/holygrail.css">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png">
-
-    <!-- Meta Social Media - Facebook OG -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="URL de tu página">
-    <meta property="og:title" content="Título de tu página en Facebook">
-    <meta property="og:image" content="URL de la imagen para Facebook">
-    <meta property="og:description" content="Descripción para Facebook">
-
-
 </head>
 
 <body>
 
     <header>
-        <h1 contenteditable>Header</h1>
+        <h1 contenteditable>Header.com</h1>
     </header>
-    <nav>main nav section1</nav>
-
-    <main contenteditable></main>
-    <div class="right-sidebar" contenteditable>Right Sidebar</div>
-    <footer contenteditable>Footer Content</footer>
+    <nav>Main Navigation</nav>
+    <main contenteditable>Main Content Area</main>
+    <aside contenteditable>Right Sidebar</aside>
+    <footer contenteditable>Footer Content — Header.com</footer>
 
 </body>
 
