--- a/lesson01/holygrail.html
+++ b/lesson01/holygrail.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Título de tu Página</title>
-    <meta name="description" content="Descripción de tu página.">
-    <meta name="author" content="Tu Nombre">
+    <title>lesson01</title>
+    <meta name="description" content="lesson01">
+    <meta name="author" content="Hamlet Martinez">
     <link rel="stylesheet" href="styles/holygrail.css">
 
 </head>
