--- a/index.html
+++ b/index.html
@@ -4,22 +4,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>lesson01</title>
-    <meta name="description" content="lesson01">
+    <title>[Hamlet Martinez] - WDD 230 - Web Frontend Development</title>
+    <meta name="description"
+        content="Web Frontend Development - WDD 230 course assignment to use html, css, js by Hamlet Martinez">
     <meta name="author" content="Hamlet Martinez">
-    <link rel="stylesheet" href="styles/holygrail.css">
+    <link rel="stylesheet" href="styles/base.css">
 
 </head>
 
 <body>
 
     <header>
-        <h1 contenteditable>Header.com</h1>
+        <!-- Profile image and name -->
+        <img src="path/to/profile/image.jpg" alt="Your Profile Image">
+        <h1>Hamlet Martinez</h1>
     </header>
-    <nav>Main Navigation</nav>
-    <main contenteditable>Main Content Area</main>
-    <aside contenteditable>Right Sidebar</aside>
-    <footer contenteditable>Footer Content — Header.com</footer>
+    <nav>
+        <!-- Main Navigation -->
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
+            <li><a href="chamber/">Chamber</a></li>
+            <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/study/scriptures" target="_blank">Scripture</a></li>
+        </ul>
+    </nav>
+    <main>
+        <!-- Main Content Area (editable) -->
+        <h2>WDD 230: Web Frontend Development</h2>
+
+        <!-- Learning Activities Section -->
+        <section class="card">
+            <h3>Learning Activities</h3>
+            <ul>
+                <!-- List items for learning activities will be populated throughout the course -->
+                <li><a href="#">Activity 1</a></li>
+                <li><a href="#">Activity 2</a></li>
+                <!-- Add more list items as needed -->
+            </ul>
+        </section>
+
+        <!-- Information Section -->
+        <section class="card">
+            <h3>Information</h3>
+            <!-- Information placeholders about the weather, number of visits, etc. -->
+            <p>Weather: [Weather Placeholder]</p>
+            <p>Number of Visits: [Visits Placeholder]</p>
+            <!-- Add more information placeholders as needed -->
+        </section>
+    </main>
+    <!--<aside contenteditable>Right Sidebar</aside>-->
+    <footer>
+        <!-- Footer Content (editable) — Header.com -->
+        <p>
+            &copy; <span id="currentYear">[Year]</span> Hamlet Martinez | State or Country Flag
+        </p>
+        <p id="lastModified"></p>
+    </footer>
+
+
+
+
 
 </body>
 
