--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         content="Web Frontend Development - WDD 230 course assignment to use html, css, js by Hamlet Martinez">
     <meta name="author" content="Hamlet Martinez">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
 
 </head>
 
