--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
+    <title>[Hamlet Martinez] - WDD 230 - Web Frontend Development</title>
+    <meta property="og:title" content="Web Frontend Development" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="file:///Users/hamletmartinez/Desktop/wdd230/wdd230/index.html" />
+    <meta property="og:image" content="URL_DE_TU_IMAGEN" />
 
 </head>
 
