--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Web Frontend Development" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="file:///Users/hamletmartinez/Desktop/wdd230/wdd230/index.html" />
-    <meta property="og:image" content="URL_DE_TU_IMAGEN" />
+    <meta property="og:image" content="images/Foto1.png" />
 
 </head>
 
