--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>[Hamlet Martinez] - WDD 230 - Web Frontend Development</title>
     <meta property="og:title" content="Web Frontend Development" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="file:///Users/hamletmartinez/Desktop/wdd230/wdd230/index.html" />
+    <meta property="og:url" content="http://localhost:7070/wdd230/" />
     <meta property="og:image" content="images/Foto1.png" />
 
 </head>
