--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <meta name="description"
         content="Web Frontend Development - WDD 230 course assignment to use html, css, js by Hamlet Martinez">
     <meta name="author" content="Hamlet Martinez">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+
 
     <title>[Hamlet Martinez] - WDD 230 - Web Frontend Development</title>
     <meta property="og:title" content="Web Frontend Development" />
