--- a/lesson02/design.html
+++ b/lesson02/design.html
@@ -14,9 +14,9 @@
 <body>
 
     <header>
-        <marquee behavior="alternate" direction="right">🪲 The Lazy Bug<br>Join us for the ribbon cutting
+        <div class="banner">🪲 The Lazy Bug<br>Join us for the ribbon cutting
             cermony!<br>Friday at 11:00 AM!</marquee>
-        <h1>Design Principles</h1>
+            <h1>Design Principles</h1>
     </header>
     <main>
         <h2>Heading 2</h2>
@@ -52,7 +52,7 @@
     </aside>
 
     <footer>
-        <!-- Your footer content goes here -->
+        <h3>testing footer</h3>
     </footer>
 
     <script src="path/to/your/script.js"></script>
