--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h3>Learning Activities</h3>
             <ul>
                 <!-- List items for learning activities will be populated throughout the course -->
-                <li><a href="#">Activity 1</a></li>
+                <li><a href="lesson02/design.html">Lesson02</a></li>
                 <li><a href="#">Activity 2</a></li>
                 <!-- Add more list items as needed -->
             </ul>
