--- a/lesson02/media-query.html
+++ b/lesson02/media-query.html
@@ -33,7 +33,7 @@
         </section>
     </main>
     <footer>
-        [Tu nombre completo aquí]
+        [Hamlet Martinez]
     </footer>
 </body>
 
